--- a/frontend/recommend-fe/package.json
+++ b/frontend/recommend-fe/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "12": "^1.0.2",
     "@angular/animations": "~12.1.2",
     "@angular/cdk": "^12.1.2",
     "@angular/common": "~12.1.2",
@@ -20,6 +21,9 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "bootstrap": "^5.0.2",
+    "jquery": "^3.6.0",
+    "n": "^7.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
