--- a/frontend/recommend-fe/angular.json
+++ b/frontend/recommend-fe/angular.json
@@ -29,10 +29,15 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/jquery-ui-dist/jquery-ui.css",
+              "./node_modules/jquery-ui-dist/jquery-ui.theme.css",
+              "./node_modules/jquery-ui-dist/jquery-ui.structure.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/jquery-ui-dist/jquery-ui.js",
+              "./node_modules/d3/dist/d3.js"
             ]
           },
           "configurations": {
@@ -99,9 +104,17 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css",
+              "./node_modules/jquery-ui-dist/jquery-ui.css",
+              "./node_modules/jquery-ui-dist/jquery-ui.theme.css",
+              "./node_modules/jquery-ui-dist/jquery-ui.structure.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/jquery-ui-dist/jquery-ui.js",
+              "./node_modules/d3/dist/d3.js"
+            ]
           }
         }
       }
