--- a/frontend/recommend-fe/package.json
+++ b/frontend/recommend-fe/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "bootstrap": "^5.0.2",
+    "d3": "^7.0.0",
     "jquery": "^3.6.0",
+    "jquery-ui-dist": "^1.12.1",
     "n": "^7.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -32,6 +34,7 @@
     "@angular-devkit/build-angular": "~12.1.2",
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
+    "@types/d3": "^7.0.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
